Provide steps to run the maven example on module path and class path (without a fat jar).
Remove maven-assembly-plugin.
Add maven package step copying all runtime dependencies to a directory.
Set Main-Class attribute in the JAR manifest.